# Cobot-Research

./: README.md
cobot/: CMakeLists.txt  package.xml
cobot_experimental_controller/: CMakeLists.txt  cobot_experimental_controller_plugin.xml  package.xml
cobot_experimental_controller/cfg/: compliance_param.cfg  desired_mass_param.cfg  teleop_gripper_param.cfg  teleop_param.cfg
cobot_experimental_controller/config/: cobot_experimental_controller.yaml
cobot_experimental_controller/include/cobot_experimental_controller/: joint_wall.h  panda_cobot_controller.h  pseudo_inversion.h  teleop_joint_pd_example_controller.h
cobot_experimental_controller/include/franka_example_controllers/: joint_wall.h  panda_cobot_controller.h  pseudo_inversion.h
cobot_experimental_controller/launch/: panda_cobot_controller.launch  teleop_gripper.launch  teleop_joint_pd_example_controller.launch
cobot_experimental_controller/launch/rviz/: franka_description_with_marker.rviz
cobot_experimental_controller/src/: joint_wall.cpp  panda_cobot_controller.cpp  teleop_gripper_node.cpp  teleop_joint_pd_example_controller.cpp
franka_description_gazebo/: CMakeLists.txt  package.xml
franka_description_gazebo/launch/: franka_upload.launch
franka_description_gazebo/robots/: hand.xacro  panda.gazebo.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/config/: panda_arm_controller.yaml  panda_gripper_controller.yaml
franka_gazebo/launch/: controller_utils.launch  franka_controller.launch  franka_gazebo.launch  gazebo_launch.launch
line_manipulation_control_law_publisher/: CMakeLists.txt  package.xml
line_manipulation_control_law_publisher/include/: circle3d.h  line3d.h  plane3d.h
line_manipulation_control_law_publisher/launch/: control_law_and_rviz_display.launch  robot.rviz
line_manipulation_control_law_publisher/src/: circle3d.cpp  cobot.h  geometry_publisher.cpp  kdl_test.cpp  line3d.cpp  line_manipulation_control_law_publisher_node.cpp  line_manipulation_kdl.cpp  line_rviz_publisher.cpp  plane3d.cpp  test.cpp  test_jacobian_node.cpp  test_line3d_node.cpp  user_controller_publisher.cpp  user_keyboard_publisher.cpp
open_manipulator_description_modified/: CMakeLists.txt  package.xml
open_manipulator_description_modified/launch/: open_manipulator_rviz.launch  open_manipulator_upload.launch
open_manipulator_description_modified/urdf/: open_manipulator.transmission.xacro  open_manipulator.urdf.xacro  open_manipulator_robot.urdf.xacro
open_manipulator_gazebo_modified/: CMakeLists.txt  package.xml
open_manipulator_gazebo_modified/launch/: controller_utils.launch  franka_controller.launch  gazebo_launch.launch  open_manipulator_gazebo.launch
open_manipulator_gazebo_modified1/config/: arm_controller.yaml
open_manipulator_gazebo_modified1/launch/: open_manipulator_controller.launch  open_manipulator_gazebo.launch
open_manipulator_gazebo_modified1/src/: omx_gripper_sub_publisher.cpp
open_manipulator_moveit_config/: .setup_assistant  package.xml
open_manipulator_moveit_config/config/: fake_controllers.yaml  open_manipulator.srdf  ros_controllers.yaml
open_manipulator_moveit_config/launch/: move_group.launch  planning_context.launch  ros_controllers.launch
paper/: paper.tex
plot/: capstone_plot.py  matrix.py  plot.py  plot_vel.py
rqt_cobot/: CMakeLists.txt  package.xml  plugin.xml
rqt_cobot/config/: cobot_gui.perspective
rqt_cobot/launch/: rqt_cobot.launch
rqt_cobot/resource/: CobotPlugin.ui
rqt_cobot/scripts/: rqt_cobot
rqt_cobot/src/rqt_cobot/: my_module.py
space_manipulation/: CMakeLists.txt  package.xml
space_manipulation/include/space_manipulation/: another_lib.h  circle3d.h  my_super_lib.h  plane2d.h  plane3d.h  spline3d.h
space_manipulation/src/: another_lib.cpp  circle3d.cpp  line3d.cpp  my_super_lib.cpp  plane2d.cpp  plane3d.cpp  spline3d.cpp
