<?xml version="1.0"?>
<package format="2">
  <name>cobot</name>
  <version>0.0.0</version>
  <description>cobot is a metapackage for all cobot packages</description>
  <maintainer email="drajabhandharaks@scu.edu">danoponline</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>libfranka</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>
  <depend>std_srvs</depend>

  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <exec_depend>line_manipulation_control_law_publisher</exec_depend>
  <exec_depend>franka_description_gazebo</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>space_manipulation</exec_depend>
  <exec_depend>cobot_experimental_controller</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>